@@ -57,59 +57,66 @@ class InboxServiceTest {
     MockitoAnnotations.openMocks(this);
 
     // Create test users
-    senderDao = new UserDao();
-    senderDao.setId("sender123");
-    senderDao.setFirstName("Alice");
-    senderDao.setLastName("Smith");
+    senderDao = UserDao.builder()
+        .id("sender123")
+        .firstName("Alice")
+        .lastName("Smith")
+        .build();
 
-    receiverDao = new UserDao();
-    receiverDao.setId("receiver123");
-    receiverDao.setFirstName("Bob");
-    receiverDao.setLastName("Johnson");
+    receiverDao = UserDao.builder()
+        .id("receiver123")
+        .firstName("Bob")
+        .lastName("Johnson")
+        .build();
 
-    userEntity = new User();
-    userEntity.setId("receiver123");
-    userEntity.setFirstName("Bob");
-    userEntity.setLastName("Johnson");
+    userEntity = User.builder()
+        .id("receiver123")
+        .firstName("Bob")
+        .lastName("Johnson")
+        .build();
 
     // Create test books
-    bookDao1 = new BookDao();
-    bookDao1.setId("book1");
-    bookDao1.setTitle("Book A");
-    bookDao1.setAuthor("Author A");
-    bookDao1.setLanguage("English");
-    bookDao1.setCondition("Good");
+    bookDao1 = BookDao.builder()
+        .id("book1")
+        .title("Book A")
+        .author("Author A")
+        .language("English")
+        .condition("Good")
+        .build();
 
-    bookDao2 = new BookDao();
-    bookDao2.setId("book2");
-    bookDao2.setTitle("Book B");
-    bookDao2.setAuthor("Author B");
-    bookDao2.setLanguage("English");
-    bookDao2.setCondition("Good");
+    bookDao2 = BookDao.builder()
+        .id("book2")
+        .title("Book B")
+        .author("Author B")
+        .language("English")
+        .condition("Good")
+        .build();
 
     // Create received swap request
-    receivedSwapRequest = new SwapRequestDao();
-    receivedSwapRequest.setId("received1");
-    receivedSwapRequest.setSender(senderDao);
-    receivedSwapRequest.setReceiver(receiverDao);
-    receivedSwapRequest.setBookToSwapWith(bookDao1);
-    receivedSwapRequest.setSwapType("ByBooks");
-    receivedSwapRequest.setAskForGiveaway(false);
-    receivedSwapRequest.setSwapStatus(SwapStatus.PENDING.getCode());
-    receivedSwapRequest.setRequestedAt(Instant.parse("2025-01-01T10:00:00Z"));
-    receivedSwapRequest.setUpdatedAt(Instant.parse("2025-01-01T10:00:00Z"));
+    receivedSwapRequest = SwapRequestDao.builder()
+        .id("received1")
+        .sender(senderDao)
+        .receiver(receiverDao)
+        .bookToSwapWith(bookDao1)
+        .swapType("ByBooks")
+        .askForGiveaway(false)
+        .swapStatus(SwapStatus.PENDING.getCode())
+        .requestedAt(Instant.parse("2025-01-01T10:00:00Z"))
+        .updatedAt(Instant.parse("2025-01-01T10:00:00Z"))
+        .build();
 
     // Create sent swap request
-    sentSwapRequest = new SwapRequestDao();
-    sentSwapRequest.setId("sent1");
-    sentSwapRequest.setSender(receiverDao);
-    sentSwapRequest.setReceiver(senderDao);
-    sentSwapRequest.setBookToSwapWith(bookDao2);
-    sentSwapRequest.setSwapType("GiveAway");
-    sentSwapRequest.setAskForGiveaway(true);
-    sentSwapRequest.setSwapStatus(SwapStatus.ACCEPTED.getCode());
-    sentSwapRequest.setRequestedAt(Instant.parse("2025-01-02T10:00:00Z"));
-    sentSwapRequest.setUpdatedAt(Instant.parse("2025-01-02T10:00:00Z"));
+    sentSwapRequest = SwapRequestDao.builder()
+        .id("sent1")
+        .sender(receiverDao)
+        .receiver(senderDao)
+        .bookToSwapWith(bookDao2)
+        .swapType("GiveAway")
+        .askForGiveaway(true)
+        .swapStatus(SwapStatus.ACCEPTED.getCode())
+        .requestedAt(Instant.parse("2025-01-02T10:00:00Z"))
+        .updatedAt(Instant.parse("2025-01-02T10:00:00Z"))
+        .build();
   }
 
   @Test
@@ -118,9 +125,9 @@ class InboxServiceTest {
     // Given
     when(userService.getUser("receiver123")).thenReturn(userEntity);
     when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(receivedSwapRequest));
+        .thenReturn(List.of(receivedSwapRequest));
     when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(sentSwapRequest));
+        .thenReturn(List.of(sentSwapRequest));
     when(chatService.getLatestMessageTimestamp("received1"))
         .thenReturn(Optional.of(Instant.parse("2025-01-03T10:00:00Z")));
     when(chatService.getLatestMessageTimestamp("sent1")).thenReturn(Optional.of(Instant.parse("2025-01-04T10:00:00Z")));
@@ -131,8 +138,8 @@ class InboxServiceTest {
     // Then
     assertEquals(2, result.size());
     // Should be sorted by latest message timestamp (sent1 has newer message)
-    assertEquals("sent1", result.get(0).getId());
-    assertEquals("received1", result.get(1).getId());
+    assertEquals("sent1", result.get(0).id());
+    assertEquals("received1", result.get(1).id());
     verify(userService).getUser("receiver123");
     verify(swapRequestRepository).findByReceiverIdOrderByRequestedAtDesc("receiver123");
     verify(swapRequestRepository).findBySenderIdOrderByRequestedAtDesc("receiver123");
@@ -147,18 +154,18 @@ class InboxServiceTest {
     when(userService.getUser("receiver123")).thenReturn(userEntity);
     when(swapRequestRepository.findByReceiverIdAndSwapStatusOrderByRequestedAtDesc("receiver123",
         SwapStatus.PENDING.getCode()))
-            .thenReturn(Arrays.asList(receivedSwapRequest));
+            .thenReturn(List.of(receivedSwapRequest));
     when(swapRequestRepository.findBySenderIdAndSwapStatusOrderByRequestedAtDesc("receiver123",
         SwapStatus.PENDING.getCode()))
-            .thenReturn(Arrays.asList());
+            .thenReturn(List.of());
 
     // When
     List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", SwapStatus.PENDING.getCode(), null);
 
     // Then
     assertEquals(1, result.size());
-    assertEquals("received1", result.get(0).getId());
-    assertEquals(SwapStatus.PENDING, result.get(0).getSwapStatus());
+    assertEquals("received1", result.getFirst().id());
+    assertEquals(SwapStatus.PENDING, result.getFirst().swapStatus());
     verify(userService).getUser("receiver123");
     verify(swapRequestRepository).findByReceiverIdAndSwapStatusOrderByRequestedAtDesc("receiver123",
         SwapStatus.PENDING.getCode());
@@ -185,17 +192,17 @@ class InboxServiceTest {
     // Given
     when(userService.getUser("receiver123")).thenReturn(userEntity);
     when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(receivedSwapRequest)); // Book A
+        .thenReturn(List.of(receivedSwapRequest)); // Book A
     when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(sentSwapRequest)); // Book B
+        .thenReturn(List.of(sentSwapRequest)); // Book B
 
     // When
     List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "book_title");
 
     // Then
     assertEquals(2, result.size());
-    assertEquals("Book A", result.get(0).getBookToSwapWith().getTitle()); // Should be first after sorting
-    assertEquals("Book B", result.get(1).getBookToSwapWith().getTitle());
+    assertEquals("Book A", result.get(0).bookToSwapWith().title()); // Should be first after sorting
+    assertEquals("Book B", result.get(1).bookToSwapWith().title());
   }
 
   @Test
@@ -204,9 +211,9 @@ class InboxServiceTest {
     // Given
     when(userService.getUser("receiver123")).thenReturn(userEntity);
     when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(receivedSwapRequest));
+        .thenReturn(List.of(receivedSwapRequest));
     when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
-        .thenReturn(Arrays.asList(sentSwapRequest));
+        .thenReturn(List.of(sentSwapRequest));
     // received1 has older message, sent1 has newer message
     when(chatService.getLatestMessageTimestamp("received1"))
         .thenReturn(Optional.of(Instant.parse("2025-01-03T10:00:00Z")));
@@ -217,8 +224,8 @@ class InboxServiceTest {
 
     // Then
     assertEquals(2, result.size());
-    assertEquals("sent1", result.get(0).getId()); // Should be first (newer message)
-    assertEquals("received1", result.get(1).getId());
+    assertEquals("sent1", result.getFirst().id()); // Should be first (newer message)
+    assertEquals("received1", result.get(1).id());
     verify(chatService).getLatestMessageTimestamp("received1");
     verify(chatService).getLatestMessageTimestamp("sent1");
   }
@@ -242,8 +249,8 @@ class InboxServiceTest {
 
     // Then
     assertEquals(2, result.size());
-    assertEquals("received1", result.get(0).getId()); // Should be first (has messages)
-    assertEquals("sent1", result.get(1).getId());
+    assertEquals("received1", result.getFirst().id()); // Should be first (has messages)
+    assertEquals("sent1", result.get(1).id());
     verify(chatService).getLatestMessageTimestamp("received1");
     verify(chatService).getLatestMessageTimestamp("sent1");
   }
@@ -261,7 +268,7 @@ class InboxServiceTest {
 
     // Then
     assertNotNull(result);
-    assertEquals(SwapStatus.ACCEPTED.getCode(), receivedSwapRequest.getSwapStatus());
+    assertEquals(SwapStatus.ACCEPTED.getCode(), receivedSwapRequest.swapStatus());
     verify(swapRequestRepository).findById("received1");
     verify(swapRequestRepository).save(receivedSwapRequest);
     // Verify events are published for both sender and receiver
@@ -292,5 +299,505 @@ class InboxServiceTest {
         () -> inboxService.updateSwapRequestStatus("received1", SwapStatus.ACCEPTED.getCode(), "unauthorized123"));
     verify(swapRequestRepository).findById("received1");
     verify(swapRequestRepository, never()).save(any());
+  }
+
+  @Test
+  @DisplayName("Should throw exception for invalid status transition")
+  void shouldThrowExceptionForInvalidStatusTransition() {
+    // Given - trying to transition from REJECTED (terminal state) to ACCEPTED
+    receivedSwapRequest.swapStatus(SwapStatus.REJECTED.getCode());
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When & Then
+    assertThrows(IllegalArgumentException.class,
+        () -> inboxService.updateSwapRequestStatus("received1", SwapStatus.ACCEPTED.getCode(), "receiver123"));
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository, never()).save(any());
+  }
+
+  @Test
+  @DisplayName("Should allow sender to mark swap as expired")
+  void shouldAllowSenderToMarkSwapAsExpired() {
+    // Given
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+    when(swapRequestRepository.save(any(SwapRequestDao.class))).thenReturn(receivedSwapRequest);
+
+    // When - sender marks their own request as expired
+    SwapRequest result = inboxService.updateSwapRequestStatus("received1", SwapStatus.EXPIRED.getCode(), "sender123");
+
+    // Then
+    assertNotNull(result);
+    assertEquals(SwapStatus.EXPIRED.getCode(), receivedSwapRequest.swapStatus());
+    verify(swapRequestRepository).save(receivedSwapRequest);
+    verify(eventPublisher, times(2)).publishEvent(any(InboxUpdateEvent.class));
+  }
+
+  @Test
+  @DisplayName("Should allow receiver to mark swap as reserved")
+  void shouldAllowReceiverToMarkSwapAsReserved() {
+    // Given - swap must be in ACCEPTED state to transition to RESERVED
+    sentSwapRequest.swapStatus(SwapStatus.ACCEPTED.getCode());
+    when(swapRequestRepository.findById("sent1")).thenReturn(Optional.of(sentSwapRequest));
+    when(swapRequestRepository.save(any(SwapRequestDao.class))).thenReturn(sentSwapRequest);
+
+    // When - receiver marks as reserved
+    SwapRequest result = inboxService.updateSwapRequestStatus("sent1", SwapStatus.RESERVED.getCode(), "sender123");
+
+    // Then
+    assertNotNull(result);
+    assertEquals(SwapStatus.RESERVED.getCode(), sentSwapRequest.swapStatus());
+    verify(swapRequestRepository).save(sentSwapRequest);
+  }
+
+  @Test
+  @DisplayName("Should sort unified inbox by date")
+  void shouldSortUnifiedInboxByDate() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(receivedSwapRequest));
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(sentSwapRequest));
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "date");
+
+    // Then
+    assertEquals(2, result.size());
+    // Should be sorted by requestedAt descending (sent1 is newer)
+    assertEquals("sent1", result.getFirst().id());
+    assertEquals("received1", result.get(1).id());
+  }
+
+  @Test
+  @DisplayName("Should sort unified inbox by sender name")
+  void shouldSortUnifiedInboxBySenderName() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(receivedSwapRequest)); // Sender: Alice Smith
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(sentSwapRequest)); // Sender: Bob Johnson
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "sender_name");
+
+    // Then
+    assertEquals(2, result.size());
+    // Should be sorted alphabetically by sender name (Alice < Bob)
+    assertEquals("received1", result.getFirst().id());
+    assertEquals("sent1", result.get(1).id());
+  }
+
+  @Test
+  @DisplayName("Should sort unified inbox by status")
+  void shouldSortUnifiedInboxByStatus() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(receivedSwapRequest)); // Status: PENDING
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(sentSwapRequest)); // Status: ACCEPTED
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "status");
+
+    // Then
+    assertEquals(2, result.size());
+    // Should be sorted alphabetically by status code (ACCEPTED < PENDING)
+    assertEquals("sent1", result.getFirst().id());
+    assertEquals("received1", result.get(1).id());
+  }
+
+  @Test
+  @DisplayName("Should handle unknown sort option by defaulting to latest message")
+  void shouldHandleUnknownSortOptionByDefaultingToLatestMessage() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(receivedSwapRequest));
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(List.of(sentSwapRequest));
+    when(chatService.getLatestMessageTimestamp("received1"))
+        .thenReturn(Optional.of(Instant.parse("2025-01-03T10:00:00Z")));
+    when(chatService.getLatestMessageTimestamp("sent1")).thenReturn(Optional.of(Instant.parse("2025-01-04T10:00:00Z")));
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "unknown_sort");
+
+    // Then
+    assertEquals(2, result.size());
+    // Should default to latest message sorting
+    assertEquals("sent1", result.getFirst().id());
+    verify(chatService).getLatestMessageTimestamp("received1");
+    verify(chatService).getLatestMessageTimestamp("sent1");
+  }
+
+  @Test
+  @DisplayName("Should mark inbox item as read by receiver")
+  void shouldMarkInboxItemAsReadByReceiver() {
+    // Given
+    receivedSwapRequest.readByReceiverAt(null);
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+    when(swapRequestRepository.save(any(SwapRequestDao.class))).thenReturn(receivedSwapRequest);
+
+    // When
+    inboxService.markInboxItemAsRead("received1", "receiver123");
+
+    // Then
+    assertNotNull(receivedSwapRequest.readByReceiverAt());
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository).save(receivedSwapRequest);
+  }
+
+  @Test
+  @DisplayName("Should mark inbox item as read by sender")
+  void shouldMarkInboxItemAsReadBySender() {
+    // Given
+    receivedSwapRequest.readBySenderAt(null);
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+    when(swapRequestRepository.save(any(SwapRequestDao.class))).thenReturn(receivedSwapRequest);
+
+    // When
+    inboxService.markInboxItemAsRead("received1", "sender123");
+
+    // Then
+    assertNotNull(receivedSwapRequest.readBySenderAt());
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository).save(receivedSwapRequest);
+  }
+
+  @Test
+  @DisplayName("Should not update inbox item if already read by receiver")
+  void shouldNotUpdateInboxItemIfAlreadyReadByReceiver() {
+    // Given
+    Instant readTime = Instant.parse("2025-01-01T12:00:00Z");
+    receivedSwapRequest.readByReceiverAt(readTime);
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When
+    inboxService.markInboxItemAsRead("received1", "receiver123");
+
+    // Then
+    assertEquals(readTime, receivedSwapRequest.readByReceiverAt()); // Should remain unchanged
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository, never()).save(any()); // Should not save if already read
+  }
+
+  @Test
+  @DisplayName("Should not update inbox item if already read by sender")
+  void shouldNotUpdateInboxItemIfAlreadyReadBySender() {
+    // Given
+    Instant readTime = Instant.parse("2025-01-01T12:00:00Z");
+    receivedSwapRequest.readBySenderAt(readTime);
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When
+    inboxService.markInboxItemAsRead("received1", "sender123");
+
+    // Then
+    assertEquals(readTime, receivedSwapRequest.readBySenderAt()); // Should remain unchanged
+    verify(swapRequestRepository, never()).save(any()); // Should not save if already read
+  }
+
+  @Test
+  @DisplayName("Should throw SwapRequestNotFoundException when marking nonexistent inbox item as read")
+  void shouldThrowSwapRequestNotFoundExceptionWhenMarkingNonexistentInboxItemAsRead() {
+    // Given
+    when(swapRequestRepository.findById("nonexistent")).thenReturn(Optional.empty());
+
+    // When & Then
+    assertThrows(SwapRequestNotFoundException.class,
+        () -> inboxService.markInboxItemAsRead("nonexistent", "receiver123"));
+    verify(swapRequestRepository).findById("nonexistent");
+    verify(swapRequestRepository, never()).save(any());
+  }
+
+  @Test
+  @DisplayName("Should not update inbox item when user is neither sender nor receiver")
+  void shouldNotUpdateInboxItemWhenUserIsNeitherSenderNorReceiver() {
+    // Given
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When
+    inboxService.markInboxItemAsRead("received1", "unauthorized123");
+
+    // Then
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository, never()).save(any()); // Should not save for unauthorized user
+  }
+
+  @Test
+  @DisplayName("Should return true when inbox item is unread by receiver")
+  void shouldReturnTrueWhenInboxItemIsUnreadByReceiver() {
+    // Given
+    com.kirjaswappi.backend.service.entities.User receiver = new com.kirjaswappi.backend.service.entities.User()
+        .id("receiver123");
+    com.kirjaswappi.backend.service.entities.User sender = new com.kirjaswappi.backend.service.entities.User()
+        .id("sender123");
+
+    SwapRequest swapRequest = SwapRequest.builder()
+        .id("swap1")
+        .receiver(receiver)
+        .sender(sender)
+        .readByReceiverAt(null)
+        .build();
+
+    // When
+    boolean result = inboxService.isInboxItemUnread(swapRequest, "receiver123");
+
+    // Then
+    assertTrue(result);
+  }
+
+  @Test
+  @DisplayName("Should return false when inbox item is read by receiver")
+  void shouldReturnFalseWhenInboxItemIsReadByReceiver() {
+    // Given
+
+    com.kirjaswappi.backend.service.entities.User receiver = new com.kirjaswappi.backend.service.entities.User()
+        .id("receiver123");
+    com.kirjaswappi.backend.service.entities.User sender = new com.kirjaswappi.backend.service.entities.User()
+        .id("sender123");
+
+    SwapRequest swapRequest = SwapRequest.builder()
+        .id("swap1")
+        .receiver(receiver)
+        .sender(sender)
+        .readByReceiverAt(Instant.now())
+        .build();
+
+    // When
+    boolean result = inboxService.isInboxItemUnread(swapRequest, "receiver123");
+
+    // Then
+    assertFalse(result);
+  }
+
+  @Test
+  @DisplayName("Should return true when inbox item is unread by sender")
+  void shouldReturnTrueWhenInboxItemIsUnreadBySender() {
+    // Given
+    com.kirjaswappi.backend.service.entities.User receiver = new com.kirjaswappi.backend.service.entities.User()
+        .id("receiver123");
+    com.kirjaswappi.backend.service.entities.User sender = new com.kirjaswappi.backend.service.entities.User()
+        .id("sender123");
+
+    SwapRequest swapRequest = SwapRequest.builder()
+        .id("swap1")
+        .receiver(receiver)
+        .sender(sender)
+        .readBySenderAt(null)
+        .build();
+
+    // When
+    boolean result = inboxService.isInboxItemUnread(swapRequest, "sender123");
+
+    // Then
+    assertTrue(result);
+  }
+
+  @Test
+  @DisplayName("Should return false when inbox item is read by sender")
+  void shouldReturnFalseWhenInboxItemIsReadBySender() {
+    // Given
+    com.kirjaswappi.backend.service.entities.User receiver = new com.kirjaswappi.backend.service.entities.User()
+        .id("receiver123");
+    com.kirjaswappi.backend.service.entities.User sender = new com.kirjaswappi.backend.service.entities.User()
+        .id("sender123");
+
+    SwapRequest swapRequest = SwapRequest.builder()
+        .id("swap1")
+        .receiver(receiver)
+        .sender(sender)
+        .readBySenderAt(Instant.now())
+        .build();
+
+    // When
+    boolean result = inboxService.isInboxItemUnread(swapRequest, "sender123");
+
+    // Then
+    assertFalse(result);
+  }
+
+  @Test
+  @DisplayName("Should return false when user is neither sender nor receiver")
+  void shouldReturnFalseWhenUserIsNeitherSenderNorReceiver() {
+    // Given
+    com.kirjaswappi.backend.service.entities.User receiver = new com.kirjaswappi.backend.service.entities.User()
+        .id("receiver123");
+    com.kirjaswappi.backend.service.entities.User sender = new com.kirjaswappi.backend.service.entities.User()
+        .id("sender123");
+
+    SwapRequest swapRequest = SwapRequest.builder()
+        .id("swap1")
+        .receiver(receiver)
+        .sender(sender)
+        .build();
+
+    // When
+    boolean result = inboxService.isInboxItemUnread(swapRequest, "unauthorized123");
+
+    // Then
+    assertFalse(result);
+  }
+
+  @Test
+  @DisplayName("Should get unread message count from chat service")
+  void shouldGetUnreadMessageCountFromChatService() {
+    // Given
+    when(chatService.getUnreadMessageCount("swap123", "receiver123")).thenReturn(5L);
+
+    // When
+    long count = inboxService.getUnreadMessageCount("receiver123", "swap123");
+
+    // Then
+    assertEquals(5L, count);
+    verify(chatService).getUnreadMessageCount("swap123", "receiver123");
+  }
+
+  @Test
+  @DisplayName("Should return zero when no unread messages")
+  void shouldReturnZeroWhenNoUnreadMessages() {
+    // Given
+    when(chatService.getUnreadMessageCount("swap123", "receiver123")).thenReturn(0L);
+
+    // When
+    long count = inboxService.getUnreadMessageCount("receiver123", "swap123");
+
+    // Then
+    assertEquals(0L, count);
+    verify(chatService).getUnreadMessageCount("swap123", "receiver123");
+  }
+
+  @Test
+  @DisplayName("Should clear unread count cache")
+  void shouldClearUnreadCountCache() {
+    // When
+    inboxService.clearUnreadCountCache("receiver123", "swap123");
+
+    // Then - method should complete without error
+    // The @CacheEvict annotation handles the cache clearing
+    // No assertions needed as this is a void method with annotation-based behavior
+  }
+
+  @Test
+  @DisplayName("Should handle empty status filter as null")
+  void shouldHandleEmptyStatusFilterAsNull() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(receivedSwapRequest));
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(sentSwapRequest));
+    when(chatService.getLatestMessageTimestamp(anyString())).thenReturn(Optional.empty());
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", "   ", null);
+
+    // Then
+    assertEquals(2, result.size());
+    verify(swapRequestRepository).findByReceiverIdOrderByRequestedAtDesc("receiver123");
+    verify(swapRequestRepository).findBySenderIdOrderByRequestedAtDesc("receiver123");
+    // Should not call status-filtered methods
+    verify(swapRequestRepository, never()).findByReceiverIdAndSwapStatusOrderByRequestedAtDesc(anyString(),
+        anyString());
+  }
+
+  @Test
+  @DisplayName("Should handle empty sort option as null")
+  void shouldHandleEmptySortOptionAsNull() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(receivedSwapRequest));
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList(sentSwapRequest));
+    when(chatService.getLatestMessageTimestamp("received1"))
+        .thenReturn(Optional.of(Instant.parse("2025-01-03T10:00:00Z")));
+    when(chatService.getLatestMessageTimestamp("sent1")).thenReturn(Optional.of(Instant.parse("2025-01-04T10:00:00Z")));
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, "   ");
+
+    // Then
+    assertEquals(2, result.size());
+    // Should default to latest message sorting
+    verify(chatService).getLatestMessageTimestamp("received1");
+    verify(chatService).getLatestMessageTimestamp("sent1");
+  }
+
+  @Test
+  @DisplayName("Should return empty list when user has no swap requests")
+  void shouldReturnEmptyListWhenUserHasNoSwapRequests() {
+    // Given
+    when(userService.getUser("receiver123")).thenReturn(userEntity);
+    when(swapRequestRepository.findByReceiverIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList());
+    when(swapRequestRepository.findBySenderIdOrderByRequestedAtDesc("receiver123"))
+        .thenReturn(Arrays.asList());
+
+    // When
+    List<SwapRequest> result = inboxService.getUnifiedInbox("receiver123", null, null);
+
+    // Then
+    assertEquals(0, result.size());
+    verify(userService).getUser("receiver123");
+  }
+
+  @Test
+  @DisplayName("Should throw exception when receiver tries to mark sender request as expired")
+  void shouldThrowExceptionWhenReceiverTriesToMarkSenderRequestAsExpired() {
+    // Given
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When & Then
+    assertThrows(IllegalArgumentException.class,
+        () -> inboxService.updateSwapRequestStatus("received1", SwapStatus.EXPIRED.getCode(), "receiver123"));
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository, never()).save(any());
+  }
+
+  @Test
+  @DisplayName("Should throw exception when sender tries to accept their own request")
+  void shouldThrowExceptionWhenSenderTriesToAcceptTheirOwnRequest() {
+    // Given
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+
+    // When & Then
+    assertThrows(IllegalArgumentException.class,
+        () -> inboxService.updateSwapRequestStatus("received1", SwapStatus.ACCEPTED.getCode(), "sender123"));
+    verify(swapRequestRepository).findById("received1");
+    verify(swapRequestRepository, never()).save(any());
+  }
+
+  @Test
+  @DisplayName("Should allow receiver to reject swap request")
+  void shouldAllowReceiverToRejectSwapRequest() {
+    // Given
+    when(swapRequestRepository.findById("received1")).thenReturn(Optional.of(receivedSwapRequest));
+    when(swapRequestRepository.save(any(SwapRequestDao.class))).thenReturn(receivedSwapRequest);
+
+    // When
+    SwapRequest result = inboxService.updateSwapRequestStatus("received1", SwapStatus.REJECTED.getCode(),
+        "receiver123");
+
+    // Then
+    assertNotNull(result);
+    assertEquals(SwapStatus.REJECTED.getCode(), receivedSwapRequest.swapStatus());
+    verify(swapRequestRepository).save(receivedSwapRequest);
+    verify(eventPublisher, times(2)).publishEvent(any(InboxUpdateEvent.class));
+  }
+
+  @Test
+  @DisplayName("Should throw BadRequestException for invalid status code")
+  void shouldThrowBadRequestExceptionForInvalidStatusCode() {
+    // Given - validation happens before repository call, so no need to mock
+
+    // When & Then
+    assertThrows(BadRequestException.class,
+        () -> inboxService.updateSwapRequestStatus("received1", "INVALID_STATUS", "receiver123"));
+    // Validation happens first, so repository should not be called
+    verifyNoInteractions(swapRequestRepository);
   }
 }
